using int8,16,32 instead of int64 for the fields

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -124,7 +124,7 @@
     "#     print(\"all movies rated by {}: {}\".format(other_users_ids, rated_by_others_all))\n",
     "\n",
     "    # movies not rated by me, but rated by other (similar users)\n",
-    "    not_rated_by_me = set.difference(rated_by_others_common, rated_by_me)\n",
+    "    not_rated_by_me = set.difference(rated_by_others_all, rated_by_me)\n",
     "#     print(\"not rated by {}: {}\".format(user_id, not_rated_by_me))\n",
     "\n",
     "    new_ratings = dict()\n",
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "df_movie = read_movie_titles()\n",
-    "df_movie = df_movie.astype({'movie_id': 'int32', 'movie_title': 'str'})\n",
+    "df_movie = df_movie.astype({'movie_id': 'int16', 'movie_title': 'str'})\n",
     "df_movie"
    ]
   },
@@ -190,6 +190,8 @@
    "outputs": [],
    "source": [
     "df = get_ratings_data()\n",
+    "df = df.astype({'user_id': 'int32', 'movie_id': 'int16', 'rating': 'int8'})\n",
+    "\n",
     "df.head(n=20)"
    ]
   },
