setting datatypes to reduce memory requirement

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -31,7 +31,7 @@
     "rating_threshold = 4                # only consider movies with ratings >= N for recommendation.\n",
     "minimum_movies_rated = 4            # consider only users who have rated at least N movies.\n",
     "\n",
-    "output_file = \"./recommendation.txt\""
+    "output_file = \"./recommendations.txt\""
    ]
   },
   {
@@ -51,6 +51,8 @@
     "\n",
     "def get_ratings_data():\n",
     "    start_time = time.time()\n",
+    "    \n",
+    "    data_types = {'user_id': 'int32', 'movie_id': 'int16', 'rating': 'int8'}\n",
     "\n",
     "    sorted_user_ratings_file = \"sorted_user_ratings.csv\"\n",
     "    if not os.path.isfile(sorted_user_ratings_file):\n",
@@ -74,12 +76,12 @@
     "                                f_out.write(\"{},{},{}\\n\".format(fields[0], movie_id, fields[1]))\n",
     "\n",
     "        print(\"saving sorted user ratings to disk...\")\n",
-    "        df = pd.read_csv(unsorted_user_ratings_file, encoding='iso-8859-1')\n",
+    "        df = pd.read_csv(unsorted_user_ratings_file, encoding='iso-8859-1', dtype = data_types)\n",
     "        \n",
     "        df.sort_values('user_id', ascending=True, inplace=True, kind='quicksort')\n",
     "        df.to_csv(sorted_user_ratings_file, index=False)\n",
     "    else:\n",
-    "        df = pd.read_csv(sorted_user_ratings_file, encoding='iso-8859-1')\n",
+    "        df = pd.read_csv(sorted_user_ratings_file, encoding='iso-8859-1', dtype = data_types)\n",
     "\n",
     "\n",
     "    end_time = time.time() \n",
@@ -190,8 +192,6 @@
    "outputs": [],
    "source": [
     "df = get_ratings_data()\n",
-    "df = df.astype({'user_id': 'int32', 'movie_id': 'int16', 'rating': 'int8'})\n",
-    "\n",
     "df.head(n=20)"
    ]
   },
